# openvmp

./: .gitattributes  .gitignore  .gitmodules  License.md  README.md
.github/: FUNDING.yml
ansible/: setup.yml
deployment/ansible/: build-sbc-cerebral.yaml  build-sbc-spinal.yaml  build-sbc.yaml  build-workstation.yaml  build.yaml  build.yml  cerebral-build.yml  cerebral-configure.yml  cerebral-setup.yml  configure-cerebral-nuc.yaml  configure-cerebral.yaml  configure-spinal-pi4b.yaml  configure-spinal-rock5b.yaml  configure-spinal.yaml  configure.yaml  configure.yml  run-all.yml  run-minimal.yml  run-sbc-cerebral.yaml  run-sbc-spinal.yaml  run-sbc.yaml  run.yaml  setup-sbc-cerebral.yaml  setup-sbc-spinal.yaml  setup-sbc.yaml  setup-workstation.yaml  setup.yaml  setup.yml
deployment/ansible/inventory/: 10-workstations.ini  50-sbcs.ini  60-sbc-groups.ini  hosts
deployment/ansible/inventory/group_vars/: sbc-all.yaml  sbc-pi4b.yaml  workstation.yaml
deployment/ansible/scripts/: build_rpi.sh
deployment/ansible/templates/: subsystem.service  systemd.service
deployment/ansible/vars/: .gitignore  networking.yml  vault.yml.sample
deployment/docker/dev/: Dockerfile  README.md
deployment/shared/files/: env.sh
deployment/shared/files/config/: fastdds_client.xml
deployment/shared/files/scripts/: build_nuc.sh  build_rpi.sh
deployment/shared/files/systemd/: dds.service
deployment/shared/templates/: subsystem.service
docs/: Building.md  Claims.md  Control.md  Deployment.md  Design.md  Development.md  Hardware.md  Inventions.md  License.md  ROS2_packages.md  Roadmap.md  Simulation.md
platform/: defaults.yaml
platform/src/openvmp_control_interactive/: CMakeLists.txt  package.xml
platform/src/openvmp_control_interactive/include/openvmp_control_interactive/: control.hpp  control_none.hpp  control_position.hpp  control_traj_vel.hpp  link.hpp  mode.hpp  mode_camera.hpp  mode_default.hpp  mode_drive.hpp  mode_full.hpp  mode_grab.hpp  mode_hang.hpp  mode_hug.hpp  mode_lift.hpp  mode_none.hpp  mode_turn.hpp  mode_walk.hpp  node.hpp
platform/src/openvmp_control_interactive/src/: control.cpp  control_none.cpp  control_position.cpp  control_traj_vel.cpp  link.cpp  main.cpp  menu.cpp  mode_camera.cpp  mode_default.cpp  mode_drive.cpp  mode_full.cpp  mode_grab.cpp  mode_hang.cpp  mode_hug.cpp  mode_lift.cpp  mode_none.cpp  mode_turn.cpp  mode_walk.cpp  node.cpp
platform/src/openvmp_gazebo_hardware_simulation/: CMakeLists.txt  package.xml
platform/src/openvmp_gazebo_hardware_simulation/include/openvmp_gazebo_hardware_simulation/: brakes.hpp  plugin.hpp
platform/src/openvmp_gazebo_hardware_simulation/src/: brakes.cpp  plugin.cpp
platform/src/openvmp_hardware_configuration/: CMakeLists.txt  README.md  package.xml
platform/src/openvmp_hardware_configuration/include/openvmp_hardware_configuration/: actuator.hpp  brake.hpp  bus.hpp  configuration.hpp  device.hpp  driver.hpp  encoder.hpp  gearbox.hpp  joint.hpp
platform/src/openvmp_hardware_configuration/src/: actuator.cpp  brake.cpp  bus.cpp  configuration.cpp  device.cpp  driver.cpp  encoder.cpp  gearbox.cpp  joint.cpp
platform/src/openvmp_hardware_configuration_py/: README.md  package.xml  setup.cfg  setup.py
platform/src/openvmp_hardware_manager/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
platform/src/openvmp_hardware_manager/include/openvmp_hardware_manager/: driver.hpp  drivers.hpp  node.hpp
platform/src/openvmp_hardware_manager/openvmp_hardware_manager/: openvmp_hardware_manager.py
platform/src/openvmp_hardware_manager/src/: driver.cpp  drivers.cpp  main.cpp  node.cpp
platform/src/openvmp_hardware_simulation_gazebo/: CMakeLists.txt  README.md  package.xml
platform/src/openvmp_hardware_simulation_gazebo/include/openvmp_hardware_simulation_gazebo/: actuator.hpp  brake.hpp  control.hpp  device_node.hpp  encoder.hpp  joint.hpp  node.hpp  plugin.hpp
platform/src/openvmp_hardware_simulation_gazebo/src/: actuator.cpp  brake.cpp  control.cpp  encoder.cpp  joint.cpp  node.cpp  plugin.cpp
platform/src/openvmp_motion_control_py/: package.xml  setup.cfg  setup.py
platform/src/openvmp_robot/: CMakeLists.txt  README.md  package.xml
platform/src/openvmp_robot/config/: fake_camera.ini  fastdds_client.xml  fastdds_server.xml  simulation.yaml
platform/src/openvmp_robot/include/openvmp_robot/: node.hpp
platform/src/openvmp_robot/launch/: robot.launch.py  simulation_world.launch.py
platform/src/openvmp_robot/launch/config/: __init__.py  files.py  openvmp_config.py
platform/src/openvmp_robot/launch/models/: __init__.py  openvmp_models.py
platform/src/openvmp_robot/launch/subsystems/: __init__.py  openvmp_subsystem_dds.py  openvmp_subsystem_drivers.py  openvmp_subsystem_motion_control.py  openvmp_subsystem_odometry.py  openvmp_subsystem_reflection.py  openvmp_subsystem_teleop.py  openvmp_subsystem_vision.py
platform/src/openvmp_robot/launch/utils/: __init__.py  openvmp_utils.py
platform/src/openvmp_robot/launch/worlds/: __init__.py  openvmp_worlds.py
platform/src/openvmp_robot/scripts/: motion_demo_stand.py  motion_demo_walk.py  package_sdf.py
platform/src/openvmp_robot/src/: node.cpp
platform/src/openvmp_robot/src/motion/: preset_walk.cpp
platform/src/openvmp_robot/worlds/: horizontal.world  mini.world  test1.world
platform/src/openvmp_robot_don1/: CMakeLists.txt  README.md  model.config  package.xml
platform/src/openvmp_robot_don1/config/: ekf.yaml  gazebo.config  hardware.yaml  microcontroller-mega250.yaml  microcontroller_mega2560.yaml  ros2_controllers.yaml  rviz.config
platform/src/openvmp_robot_don1/include/openvmp_robot_don1/: node.hpp
platform/src/openvmp_robot_don1/launch/: openvmp_robot_don1.launch.py
platform/src/openvmp_robot_don1/meshes/: .gitignore  part-hook.dae  part-hook.stl
platform/src/openvmp_robot_don1/models/: openvmp_robot_don1.urdf
platform/src/openvmp_robot_don1/rviz/: config.rviz  urdf_config.rviz
platform/src/openvmp_robot_don1/scripts/: fake_hardware_setup.sh
platform/src/openvmp_robot_don1/src/: main.cpp  node.cpp
(+11 files in other folders)
