<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openvmp_hardware_manager</name>
  <version>0.0.1</version>
  <description>Hardware Manager for OpenvMP robots</description>
  <maintainer email="openvmp@proton.me">Roman Kuzmenko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>
  <depend>openvmp_hardware_configuration</depend>
  <depend>modbus</depend>
  <depend>modbus_rtu</depend>
  <depend>stepper_driver_em2rs</depend>
  <depend>switch_r413d08</depend>
  <depend>serial_bus</depend>
  <depend>encoder_amt21</depend>
  <depend>remote_actuator</depend>
  <depend>remote_encoder</depend>
  <depend>brake</depend>
  <depend>switch_interface</depend>
  <depend>brake_switch</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>