<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openvmp_hardware_manager</name>
  <version>0.0.1</version>
  <description>Hardware Manager for OpenvMP robots</description>
  <maintainer email="openvmp@proton.me">Roman Kuzmenko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>openvmp_hardware_configuration</depend>
  <depend>remote_encoder</depend>
  <depend>remote_serial_bus</depend>
  <depend>amt21_driver</depend>
  <depend>remote_actuator</depend>
  <depend>remote_modbus</depend>
  <depend>remote_modbus_rtu</depend>
  <depend>em2rs_driver</depend>
  <depend>remote_brake</depend>
  <depend>remote_switch</depend>
  <depend>remote_brake_switch</depend>
  <depend>r413d08_driver</depend>
  <depend>remote_microcontroller</depend>
  <depend>remote_actuator_pwm</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>