<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>openvmp_hardware_simulation_gazebo</name>
  <version>0.0.1</version>
  <description>Simulation of OpenVMP hardware</description>
  <maintainer email="openvmp@proton.me">Roman Kuzmenko</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>brake</depend>
  <depend>openvmp_hardware_configuration</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>sdformat9</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>